--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "wk2_thur_lab",
   "version": "1.0.0",
-  "description": "",
+  "description": "Git Test",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Olalekan Jimoh",
   "license": "ISC"
 }
